Added rest api of updating and item and get the list of items per category
