# src/main/java/com/labfarward/programmingtest/controller/ItemCategoryController.java
@@ -12,6 +12,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -27,7 +28,19 @@ public class ItemCategoryController implements CategoriesApi {
 
     @Override
     public ResponseEntity<ItemResponseDto> saveItem(Integer categoryId, @Valid ItemRequestDto itemRequestDto) {
-        ItemResponseDto itemResponseDto = itemCategoryFacade.saveItem(categoryId,itemRequestDto);
+        ItemResponseDto itemResponseDto = itemCategoryFacade.saveOrUpdateItem(null,categoryId,itemRequestDto);
         return new ResponseEntity<>(itemResponseDto, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<ItemResponseDto> updateItem(Integer categoryId, Integer itemId, @Valid ItemRequestDto itemRequestDto) {
+        ItemResponseDto itemResponseDto = itemCategoryFacade.saveOrUpdateItem(itemId,categoryId,itemRequestDto);
+        return new ResponseEntity<>(itemResponseDto, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<ItemResponseDto>> getItems(Integer categoryId) {
+        List<ItemResponseDto> itemResponseDtos = itemCategoryFacade.getItems(categoryId);
+        return new ResponseEntity<>(itemResponseDtos, HttpStatus.OK);
     }
 }
